k8s/nginx-ingress/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirest: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: frontend-ingress
  namespace: ns-frontend
spec:
  rules:
  - host: k3a110.p.ssafy.io
    http:
      paths:
      - backend:
          serviceName: frontend-svc
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - k3a110.p.ssafy.io
    secretName: k3a110.p.ssafy.io
