k8s/nginx-ingress/ingress-back.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: camcoder-project
  annotations:
#nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - k3a110.p.ssafy.io
    secretName: tls-secret
  rules:
  - host: k3a110.p.ssafy.io
    http:
      paths:
      - path: /api
        backend:
          serviceName: camcoder-spring-springboot
          servicePort: 8082
