k8s/nginx-ingress/ingress-buildnode.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: buildnode-ingress
  namespace: ns-buildnode
  annotations:
#nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - k3a110.p.ssafy.io
    secretName: tls-secret
  rules:
  - host: k3a110.p.ssafy.io
    http:
      paths:
      - path: /cbuild
        backend:
          serviceName: buildnode-svc
          servicePort: 3000
